# CMakeBits

./: .hgignore  00Readme.txt  CMakeLists.txt  README.md  Todo.txt
ExternalComponent/: CMakeLists.txt  README.md
ExternalComponent/SimpleMake/: Makefile
ExternalComponent/minzip/: CMakeLists.txt
GoogleTest/: CMakeLists.txt
Hello/: CMakeLists.txt  hello.cpp
LibZiPTool/: CMakeLists.txt  libziptool.cpp
SimpleLib/: CMakeLists.txt  simplelib.cpp  simplelib_base.cpp  simplelib_base.hpp
Testing/: CMakeLists.txt  someTest.cpp
Tutorial/: CMakeLists.txt  TutorialConfig.h.in  license.txt  tutorial.cxx
Tutorial/MathFunctions/: CMakeLists.txt  MathFunctions.h  MathFunctionsConfig.h.in  mysqrt.cxx
UseSimpleLib/: CMakeLists.txt  useSimpleLib.cpp
Visibility/: CMakeLists.txt  Readme.md
